--- a/32 Capstone Project - Battleship/jsconfig.json
+++ b/32 Capstone Project - Battleship/jsconfig.json
@@ -2,6 +2,6 @@
   "include": [
     "*.js",
     "libraries/*.js",
-    "c:\\Users\\michr\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.0\\p5types\\global.d.ts"
+    "c:\\Users\\4202555.ACADEMUS\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.0\\p5types\\global.d.ts"
   ]
 }
